# rl_nav

./: LICENSE  README.md  package.xml
models/magpie_accel_policy1_26012026/: config.json  git.diff  sf_log.txt
models/magpie_accel_policy2_aggressive_magpie_adp_nullified_02022026/: config.json  git.diff  sf_log.txt
models/magpie_accel_policy3_aggressive_magpie_refined_params_02022026_smooth_aggressive_ttc/: config.json  git.diff  sf_log.txt
models/magpie_lidar_policy1/: config.json  git.diff
models/magpie_lidar_policy1_acc/: config.json
models/magpie_lidar_policy1_acc_08012026/: config.json  git.diff  sf_log.txt
models/magpie_lidar_policy1_vel_ttc_yaw/: config.json  git.diff
models/magpie_lidar_policy1_vel_ttc_yaw_noisy_obs_24_Nov_magpie_model/: config.json  git.diff
models/magpie_lidar_policy2/: git.diff
models/magpie_lidar_policy2_acc_yaw_sp/: git.diff
models/magpie_lidar_policy2_vel_ttc_yaw_21_Nov/: sf_log.txt
models/magpie_lidar_policy2_vel_ttc_yaw_noisy_obs_21_Nov/: git.diff  sf_log.txt
models/magpie_lidar_policy3_acc_yaw_sp/: git.diff  sf_log.txt
models/magpie_lidar_policy3_random_envs/: config.json  git.diff  sf_log.txt
models/magpie_lidar_policy4_acc_yaw_sp/: config.json  git.diff
models/magpie_lidar_policy4_random_envs_stable_at_goal/: config.json
scripts/: bins.csv  bins_downsampled.csv  lidar_nav_acc_ros2_node.py  lidar_nav_ros_node.py  lidar_nav_vel_ros1_node.py  lidar_nav_vel_ros2_node.py  phi_deg_organized.txt  points3d_xyz.csv  process_pointcoud.ipynb  read_csv_range.ipynb  standalone_inference.py  theta_deg_organized.txt
(+142 files in other folders)
